# PSTeo-A

./: README.md
EVAL_02/Ex01/: main.cpp
EVAL_02/Ex02/: main.cpp
EVAL_02/Ex03/: frases.txt  main.cpp
EVAL_02/Ex04/: main.cpp
GUIA_05/Ex01/: main.cpp
GUIA_05/Ex02/: main.cpp
GUIA_05/Ex03/: main.cpp
GUIA_05/Ex04/: main.cpp
GUIA_05/Ex05/: main.cpp
GUIA_05/Ex06/: main.cpp
GUIA_05/Ex07/: main.cpp
GUIA_05/Ex08/: Person.cpp  Person.h  main.cpp
GUIA_06/Ex02/: crea_data.cpp  main.cpp
GUIA_06/Ex03/: frases.txt  main.cpp
GUIA_06/Ex03/output/: frases.txt
GUIA_06/Ex04/: ejemplo.txt  main.cpp
GUIA_06/Ex05/: main.cpp
GUIA_07/: CMakeLists.txt
GUIA_07/Ex01/: main.cpp
GUIA_07/Ex02/: main.cpp
GUIA_07/Ex03/: main_01.cpp  main_02.cpp
GUIA_07/Ex04/: main.cpp
GUIA_07/Ex05/: ComputerException.h  InputException.h  OutputException.h  ProcessorException.h  main.cpp
PROYECTO/: CMakeLists.txt  Exceptions.h  FileManager.cpp  FileManager.h  Prestamo.cpp  Prestamo.h  Registro.cpp  Registro.h  Usuario.cpp  Usuario.h  Usurario.cpp  main.cpp  prestamos.txt  registros.txt  usuarios.txt
